# doit

./: .gitignore  ChangeLog  Makefile.am  README.md  TODO  configure.ac  doit.1.include
debian/: control
src/: Makefile.am  doit  doit.conf
